# MagangAWG

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
bldc_motor/: package.xml  setup.cfg  setup.py
bldc_motor/bldc_motor/: modbus_func.py  motorController.py
bldc_motor/config/: motor_config.yaml
bldc_motor/launch/: motor_controller.launch.py
launch/: me31_app.launch.py
me31_modbus/: me31_node.py  me31_pymodbus_node.py  ui_node.py
modbus_bridge_pkg/: package.xml  setup.cfg  setup.py
modbus_bridge_pkg/config/: me31_params.yaml
modbus_bridge_pkg/launch/: modbus.launch.py
modbus_bridge_pkg/modbus_bridge_pkg/: controller.py  gui_node.py  modbus_func.py  modbus_node.py
msg/: InterfacesData.msg
xaxa0404/: controller.py  controller_pymodbus.py  ebyte_easymodbus.py  modbus_executor_node.py  modbus_node.py  modbus_node_pymodbus.py  modbus_ui_node.py
