<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>me31_modbus</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="damar@todo.todo">damar</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>easymodbus==2.0.1</depend>
  <depend>pymodbus==3.8.3</depend>
  <depend>me31_msg</depend>

  <!-- <exec_depend>me31_interfaces</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
